ghost/ingressroute-funkypenguin.co.nz.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: funkypenguin.co.nz
  namespace: ghost
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`funkypenguin.co.nz`)
      kind: Rule
      services:
        - name: ghost
          kind: Service
          port: 443
          scheme: http
    - match: Host(`www.funkypenguin.co.nz`)
      kind: Rule
      services:
        - name: ghost
          kind: Service
          port: 443          
          scheme: http
  tls:
    secretName: funkypenguin.co.nz-tls
